# bestia_dev_text_to_speech

./: Cargo.toml  README.md  RELEASES.md  cache5.txt  how_to_run.md
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  tidy_warnings.txt
docs/bestia_dev_text_to_speech/: all.html  fn.format_hello_phrase.html  fn.format_upper.html  fn.format_upper_hello_phrase.html  fn.post_text_to_speech.html  fn.prepare_request_json.html  index.html  sidebar-items.js
docs/bestia_dev_text_to_speech/utils_mod/: fn.make_uppercase.html  index.html  sidebar-items.js
docs/search.desc/bestia_dev_text_to_speech/: bestia_dev_text_to_speech-desc-0-.js
docs/src/bestia_dev_text_to_speech/: lib.rs.html  utils_mod.rs.html
examples/: example_1.rs
sample_files/: docker_rust_development_speech.txt  text_1.txt
src/: lib.rs  utils_mod.rs
tests/: integration_test.rs
tmp/: temp5.txt
