[package]
name = "bestia_dev_text_to_speech"
version = "0.1.39"
description = "Text-to-speech CLI using Google api"
authors = ["bestia.dev <info@bestia.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/bestia_dev_text_to_speech"
categories = ["rust-patterns"]
keywords = ["text to speech"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.4.0"
ureq= "2.4.0"
base64-compat = "1.0.0"
