[package]
name = "bestia_dev_text_to_speech"
version = "0.1.52"
description = "Text-to-speech CLI using Google api"
authors = ["bestia.dev <info@bestia.dev>"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/bestia_dev_text_to_speech"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained","ready-for-use","rustlang"]
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["command-line-utilities"]
# Never publish to crates.io.
publish = false

[dependencies]
log = "0.4.18"
pretty_env_logger="0.5.0"
ureq= "2.6.2"
base64-compat = "1.0.0"
